// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 137291,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 137476,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 231321,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 259135,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 270255,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 242327,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 217990,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 218106,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 237595,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 215134,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 373436,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 215263,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 363780,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 309798,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 299953,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 184596,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 193038,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 337042,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 259663,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 321890,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 252979,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 262579,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 264078,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 290410,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 341222,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 351454,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 335573,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 346864,
}
`;
